<resources>
    <string name="app_name">Tiểu AA</string>
    <string name="titleMain">Tiểu AA - thông báo</string>

    <string name="noteAplication">
        <b>QUAN TRỌNG, CẦN ĐỌC KĨ</b>\n
        \tKhi bạn ấn vào nút \"Đồng ý\" nghĩa là bạn đã đồng ý với các điều khoản sau đây:\n
        <b>Về sữ dụng dữ liệu:</b>\n
        \tdòng 1\n
        <b>Về phần mềm:</b>\n
        \tdòng 2\n
        <b>Liên hệ và hổ trợ:</b>\n
        \tdòng 3</string>
    <string name="ClickYes">Đồng ý</string>
    <string name="ClickNo">Không đồng ý</string>

    <string name="titleActivityInformation">Ami đang muốn biết một ít thông tin về bạn</string>
    <string name="titleInformartion"><b>Thông tin cá nhân</b></string>
    <string name="noteInformation">
        chú ý:\n\t\t>|-<u>Vui lòng điền đầy đủ thông tin.</u>\n
        \t\t>|-Thông tin <u>có thể chỉnh sửa</u> trong tương lai.</string>
    <string name="name">Tên của bạn:</string>
    <string name="testName">vd: Vinh, Minh Vinh,..</string>
    <string name="job">Bạn là:</string>
    <string name="jobBoy">Nam</string>
    <string name="jobGirl">Nữ</string>
    <string name="ok">Đăng ký</string>
    <string name="restartOk">Đăng ký lại</string>
    <string name="noteInformationError">Vui lòng điền <b>đầy đủ</b> thông tin</string>
    <string name="noteInformationComplete">Đăng ký thành công!!!\nChúc bạn có một thời gian học tập giải trí vui vẻ cùng Ami</string>

    <string name="Chat">Trò chuyện</string>
    <string name="Test">Bài tập</string>
    <string name="TestCode">Thực hành</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>

    <string name="deleteData">Xóa toàn bộ dữ liệu</string>
    <string name="deleteDataComplete">Đã xóa toàn bộ dữ liệu</string>
    <string name="deleteDataError">Đã hủy xóa dữ liệu</string>
    <string name="deleteDataCompletess">bạn đã click đồng ý [n] lần</string>
    <string name="noteDeleteData">
        \tBạn thật sự muốn xóa <b>tất cả dữ liệu</b> trong trò chơi ??\n
        \tVui lòng ấn vào \"Đồng ý\" <u>51</u> lần.\n
        \tẤn vào \"Không đồng ý\" để quay trở lại</string>

    <string name="editMenu">Sửa thông tin cá nhân</string>
    <string name="deleteDataMenu">Xóa tất cả dử liệu</string>
    <string name="messengerExit">
        Cảm ơn vì đã tin dùng Ami - phần mềm hổ trợ học tập\n
        ấn vào tiếp tục để thoát khỏi phầm mềm.
    </string>
    <string name="exitMenu">Thoát</string>
    <string name="continueExit">Tiếp tục</string>
    <string name="cancelExit">Quay lại</string>
</resources>
