<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/iconedit"
        android:title="@string/editMenu"/>
    <item
        android:id="@+id/deleteData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icondeletedata"
        android:title="@string/deleteDataMenu" />
    <item
        android:id="@+id/exit"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/iconexit"
        android:title="@string/exitMenu" />
</menu>
