<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/noteAplication"
            android:textSize="20sp"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="15"
        android:layout_height="0dp"
        android:layout_marginHorizontal="75dp"
        android:layout_marginVertical="5dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ButtonYes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ClickYes"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"/>
        <Button
            android:id="@+id/ButtonNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ClickNo"
            android:textSize="20sp"
            android:layout_marginHorizontal="25dp"/>
    </LinearLayout>
</LinearLayout>
